[gd_scene load_steps=11 format=3 uid="uid://bf6d8441kputg"]

[ext_resource type="Script" uid="uid://b78st717h83hp" path="res://scripts/background_platform_hole.gd" id="1_iufgt"]
[ext_resource type="Texture2D" uid="uid://moivnwsayk5s" path="res://ressources/calque_definitif.png" id="2_t5fau"]
[ext_resource type="Script" uid="uid://cm7yt0hl0psky" path="res://scripts/crumbl_ground.gd" id="3_t5fau"]
[ext_resource type="Script" uid="uid://2x2202q5jt4d" path="res://scripts/platform_string.gd" id="4_7yrho"]

[sub_resource type="QuadMesh" id="QuadMesh_7yrho"]
size = Vector2(1836, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5fau"]
size = Vector2(432, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iufgt"]
size = Vector2(26, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yrho"]
size = Vector2(1378, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41thj"]
size = Vector2(1376, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylbnl"]
size = Vector2(225.75, 135)

[node name="background_platform_hole" type="Node2D"]
script = ExtResource("1_iufgt")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(918, -67)
mesh = SubResource("QuadMesh_7yrho")

[node name="platform_hole" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform_hole"]
position = Vector2(216, -68)
shape = SubResource("RectangleShape2D_t5fau")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="platform_hole"]
position = Vector2(1823, -68)
shape = SubResource("RectangleShape2D_iufgt")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(918, -495)
texture = ExtResource("2_t5fau")

[node name="crumbl ground" type="StaticBody2D" parent="."]
position = Vector2(432, 0)
script = ExtResource("3_t5fau")

[node name="CollisionShape2D" type="CollisionShape2D" parent="crumbl ground"]
position = Vector2(689, -68)
shape = SubResource("RectangleShape2D_7yrho")

[node name="Area2D" type="Area2D" parent="crumbl ground"]
position = Vector2(0, -135)
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="crumbl ground/Area2D"]
position = Vector2(689, -10)
shape = SubResource("RectangleShape2D_41thj")

[node name="platform string" type="StaticBody2D" parent="."]
script = ExtResource("4_7yrho")

[node name="platform1" type="CollisionShape2D" parent="platform string"]
position = Vector2(544, -67)
shape = SubResource("RectangleShape2D_ylbnl")

[node name="platform2" type="CollisionShape2D" parent="platform string"]
position = Vector2(1004, -68)
shape = SubResource("RectangleShape2D_ylbnl")

[node name="platform3" type="CollisionShape2D" parent="platform string"]
position = Vector2(1465, -68)
shape = SubResource("RectangleShape2D_ylbnl")

[connection signal="body_entered" from="crumbl ground/Area2D" to="crumbl ground" method="_on_area_2d_body_entered"]
